Vesselness calculation using hessian/gaussian filters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,27 @@
 cmake_minimum_required(VERSION 2.8.9)
 
-project(HessianRecursiveGaussianImage)
+project(HessianVesselnessImage)
 
 #-----------------------------------------------------------------------------
 # Extension meta-information
-set(EXTENSION_HOMEPAGE "http://slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/HessianRecursiveGaussianImage")
+set(EXTENSION_HOMEPAGE "http://slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/HessianVesselnessImage")
 set(EXTENSION_CATEGORY "itk CLI Module")
 set(EXTENSION_CONTRIBUTORS "Longquan Chen (BWH)")
-set(EXTENSION_DESCRIPTION "ITK CLI module for HessianRecursiveGaussianImage filter")
-set(EXTENSION_ICONURL "http://www.example.com/Slicer/Extensions/HessianRecursiveGaussianImage.png")
-set(EXTENSION_SCREENSHOTURLS "http://www.example.com/Slicer/Extensions/HessianRecursiveGaussianImage/Screenshots/1.png")
+set(EXTENSION_DESCRIPTION "ITK CLI module for HessianVesselnessImage filter")
+set(EXTENSION_ICONURL "http://www.example.com/Slicer/Extensions/HessianVesselnessImage.png")
+set(EXTENSION_SCREENSHOTURLS "http://www.example.com/Slicer/Extensions/HessianVesselnessImage/Screenshots/1.png")
 
 #-----------------------------------------------------------------------------
 # Extension dependencies
-find_package(Slicer REQUIRED)
-include(${Slicer_USE_FILE})
+#find_package(SlicerExecutionModel REQUIRED)
+#find_package(Slicer REQUIRED)
+#include(${Slicer_USE_FILE})
 
 #-----------------------------------------------------------------------------
 # Extension modules
 add_subdirectory(HessianRecursiveGaussianImage)
+add_subdirectory(Hessian3DToVesselnessMeasureImage)
+add_subdirectory(HessianVesselnessImage)
 ## NEXT_MODULE
 
 #-----------------------------------------------------------------------------
