--- a/HessianVesselnessFilter/CMakeLists.txt
+++ b/HessianVesselnessFilter/CMakeLists.txt
@@ -1,15 +1,13 @@
 
 cmake_minimum_required(VERSION 3.2)
 #-----------------------------------------------------------------------------
-set(MODULE_NAME HessianRecursiveGaussianImage)
+set(MODULE_NAME HessianVesselnessFilter)
 
 #-----------------------------------------------------------------------------
 
 #
 # SlicerExecutionModel
 #
-#find_package(SlicerExecutionModel REQUIRED)
-#include(${SlicerExecutionModel_USE_FILE})
 if(NOT Slicer_SOURCE_DIR)
   find_package(Slicer REQUIRED)
   include(${Slicer_USE_FILE})
